Add a missing '%s' in a string.

--- a/po/pl.po
+++ b/po/pl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr "Project-Id-Version: dpkg 1.13.19\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-02 03:58+0300\n"
-"PO-Revision-Date: 2006-06-16 18:46+0200\n"
+"PO-Revision-Date: 2006-06-17 21:14+0300\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
@@ -4787,7 +4787,7 @@ msgstr "ostrze¿enie: podano --update, ale %s nie istnieje"
 #: scripts/dpkg-statoverride.pl:139
 #, perl-format
 msgid "failed to chown %s: %s"
-msgstr "b³±d wykonania polecenia chown: %s"
+msgstr "b³±d wykonania polecenia chown %s: %s"
 
 #: scripts/dpkg-statoverride.pl:140
 #, perl-format
