--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-17  Guillem Jover  <guillem@debian.org>
+
+	* pl.po: Add a missing '%s' in a string.
+
 2006-06-17  Christian Perrier  <bubulle@debian.org>
 
 	* *.po: Preventive unfuzzy for "alternativse" being corrected
