Give a correct warning when the user requested an unknown sign command that we will default to a pgp style interface. Closes: #133470

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-06-18  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-buildpackage.sh: Fix testing
+	the content of $signinterface by moving the
+	test to a place where it can actually fail.
+	Give the user a correct warning message about
+	what we do (i.e. defaulting to pgp style).
+
 2006-06-17  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-source.pl: Fix typo in regex that caused
