--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   [ Frank Lichtenheld ]
   * dpkg-source issued spurious warnings about fields defined with
     XB-. They now get correctly suppressed. Closes: #374154
+  * Give a correct warning when the user requested an unknown
+    sign command that we will default to a pgp style interface.
+    Closes: #133470
 
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
