--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-18  Robert Luberda  <robert@debian.org>
+
+	* pl.po: Updated to 906t11f21u.
+
 2006-06-17  Guillem Jover  <guillem@debian.org>
 
 	* pl.po: Add a missing '%s' in a string.
