Update Catalan dpkg translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
   * Basque (Piarres Beobide). Closes: #373107
   * Polish (Robert Luberda).
+  * Catalan (Guillem Jover).
 
   [ New dpkg Translations ]
   * Nepali (Paras Pradhan). Closes: #373728
