--- a/po/ca.po
+++ b/po/ca.po
@@ -2,14 +2,15 @@
 # Copyright © 2001, 2002, 2003, 2004, 2005, 2006 Software in the Public Interest, Inc.
 # Antoni Bella <bella5@teleline.es>, 2001, 2002.
 # Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2005, 2006.
+# Guillem Jover <guillem@debian.org>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-02 03:58+0300\n"
-"PO-Revision-Date: 2006-02-17 08:51+0200\n"
-"Last-Translator: Jordi Mallach <jordi@debian.org>\n"
+"PO-Revision-Date: 2006-06-19 05:34+0300\n"
+"Last-Translator: Guillem Jover <guillem@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -181,13 +182,12 @@ msgid "unable to fill %.250s with padding"
 msgstr "no es pot emplenar %.250s"
 
 #: lib/dbmodify.c:116
-#, fuzzy, c-format
+#, c-format
 msgid "unable to flush %.250s after padding"
 msgstr "no es pot fer «flush» en %.250s després del farciment"
 
-# FIXME original
 #: lib/dbmodify.c:118
-#, fuzzy, c-format
+#, c-format
 msgid "unable to seek to start of %.250s after padding"
 msgstr "no es pot tornar al principi de %.250s després del farciment"
 
@@ -864,9 +864,9 @@ msgid "must start with an alphanumeric"
 msgstr "ha de començar amb un caràcter alfanumèric"
 
 #: lib/parsehelp.c:123
-#, fuzzy, c-format
+#, c-format
 msgid "character `%c' not allowed (only letters, digits and characters `%s')"
-msgstr "el caràcter «%c» no està permés - només s'admeten lletres, dígits i %s"
+msgstr "el caràcter «%c» no està permés (només lletres, dígits i caràcters «%s»)"
 
 #: lib/parsehelp.c:178
 msgid "<none>"
@@ -899,9 +899,8 @@ msgid "empty value for %s"
 msgstr "valor buit per a %s"
 
 #: lib/showcright.c:34
-#, fuzzy
 msgid "cannot open GPL file"
-msgstr "no es pot obrir el fitxer GPL "
+msgstr "no es pot obrir el fitxer GPL"
 
 #: lib/showpkg.c:70
 #, c-format
@@ -1850,9 +1849,9 @@ msgid "--compare-versions bad relation"
 msgstr "relació dolenta de --compare-versions"
 
 #: src/enquiry.c:429 src/enquiry.c:440
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: version '%s' has bad syntax: %s\n"
-msgstr "la versió «b» té una sintaxi dolenta: %s\n"
+msgstr "dpkg: la versió «%s» té una sintaxi dolenta: %s\n"
 
 #: src/errors.c:58
 #, c-format
@@ -2361,9 +2360,9 @@ msgstr ""
 "a través de «less» o «more»!"
 
 #: src/main.c:206 src/query.c:544 dpkg-deb/main.c:177 dpkg-split/main.c:157
-#, fuzzy, c-format
+#, c-format
 msgid "conflicting actions -%c (--%s) and -%c (--%s)"
-msgstr "accions en conflicte --%s i --%s"
+msgstr "accions en conflicte -%c (--%s) i -%c (--%s)"
 
 #: src/main.c:212
 #, c-format
@@ -2524,9 +2523,9 @@ msgid "unknown force/refuse option `%.*s'"
 msgstr "opció force/refuse desconeguda «%.*s»"
 
 #: src/main.c:368
-#, fuzzy, c-format
+#, c-format
 msgid "Warning: obsolete force/refuse option `%s'\n"
-msgstr "Avís: l'opció és obsoleta «--%s»\n"
+msgstr "Avís: l'opció force/refuse «%s» és obsoleta\n"
 
 #: src/main.c:491 src/main.c:501 src/main.c:509
 msgid "couldn't malloc in execbackend"
@@ -2542,14 +2541,12 @@ msgid "failed to exec %s"
 msgstr "no s'ha pogut executar %s"
 
 #: src/main.c:538
-#, fuzzy
 msgid "--command-fd takes one argument, not zero"
-msgstr "--command-fd accepta 1 argument, no 0"
+msgstr "--command-fd accepta un argument, no zero"
 
 #: src/main.c:540
-#, fuzzy
 msgid "--command-fd only takes one argument"
-msgstr "--command-fd només accepta 1 argument"
+msgstr "--command-fd només accepta un argument"
 
 #: src/main.c:542
 msgid "invalid number for --command-fd"
@@ -2603,19 +2600,19 @@ msgstr ""
 " Només es configurarà una vegada.\n"
 
 #: src/packages.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "  Package %s which provides %s is to be removed.\n"
-msgstr "  %.250s proveeix %.250s però serà desinstal·lat.\n"
+msgstr "  El paquet %.250s que proveeix %.250s serà desinstal·lat.\n"
 
 #: src/packages.c:272
-#, fuzzy, c-format
+#, c-format
 msgid "  Package %s is to be removed.\n"
-msgstr "  %.250s serà desinstal·lat.\n"
+msgstr "  El paquet %.250s serà desinstal·lat.\n"
 
 #: src/packages.c:287
 #, c-format
 msgid "  Version of %s on system is %s.\n"
-msgstr ""
+msgstr "  La versió de %s en el sistema és %s.\n"
 
 #: src/packages.c:307
 #, c-format
@@ -2623,24 +2620,24 @@ msgid "dpkg: also configuring `%s' (required by `%s')\n"
 msgstr "dpkg: també configura «%s» (requerit per «%s»)\n"
 
 #: src/packages.c:313
-#, fuzzy, c-format
+#, c-format
 msgid "  Package %s which provides %s is not configured yet.\n"
-msgstr "  %.250s proveeix %.250s però serà desconfigurat.\n"
+msgstr "  El paquet %.250s que proveeix %.250s encara no està configurat.\n"
 
 #: src/packages.c:316
-#, fuzzy, c-format
+#, c-format
 msgid "  Package %s is not configured yet.\n"
-msgstr " encara no està configurat.\n"
+msgstr "  El paquet %s encara no està configurat.\n"
 
 #: src/packages.c:328
-#, fuzzy, c-format
+#, c-format
 msgid "  Package %s which provides %s is not installed.\n"
-msgstr "El paquet «%s» no està instal·lat.\n"
+msgstr "  El paquet %s que proveeix %s no està instal·lat.\n"
 
 #: src/packages.c:331
-#, fuzzy, c-format
+#, c-format
 msgid "  Package %s is not installed.\n"
-msgstr "El paquet «%s» no està instal·lat.\n"
+msgstr "  El paquet %s no està instal·lat.\n"
 
 #: src/packages.c:399
 msgid "; however:\n"
@@ -2975,19 +2972,19 @@ msgid "Package `%s' does not contain any files (!)\n"
 msgstr "El paquet «%s» no conté cap fitxer (!)\n"
 
 #: src/query.c:376
-#, fuzzy, c-format
+#, c-format
 msgid "locally diverted to: %s\n"
-msgstr "desviat localment"
+msgstr "desviat localment a: %s\n"
 
 #: src/query.c:379
-#, fuzzy, c-format
+#, c-format
 msgid "package diverts others to: %s\n"
-msgstr "d'altres paquets desviats"
+msgstr "el paquet desvia d'altres a: %s\n"
 
 #: src/query.c:382
-#, fuzzy, c-format
+#, c-format
 msgid "diverted by %s to: %s\n"
-msgstr "desviat per %s"
+msgstr "desviat per %s a: %s\n"
 
 #: src/query.c:404
 msgid ""
@@ -3003,7 +3000,7 @@ msgid "Debian `%s' package management program query tool\n"
 msgstr "Eina de consultes al programa de gestió de paquets «%s» de Debian\n"
 
 #: src/query.c:482
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Commands:\n"
 "  -s|--status <package> ...        Display package status details.\n"
@@ -3014,28 +3011,18 @@ msgid ""
 "  -S|--search <pattern> ...        Find package(s) owning file(s).\n"
 "\n"
 msgstr ""
-"Forma d'ús: %s [<opció> ...] <ordre>\n"
-"\n"
 "Ordres:\n"
-"  -s|--status <paquet> ...            Mostra detalls de l'estat del paquet.\n"
-"  -p|--print-avail <paquet> ...       Mostra detalls de la versió "
+"  -s|--status <paquet> ...         Mostra detalls de l'estat del paquet.\n"
+"  -p|--print-avail <paquet> ...    Mostra detalls de la versió "
 "disponible.\n"
-"  -L|--listfiles <paquet> ...         Llista els fitxers que pertanyen als\n"
-"                                      paquets.\n"
-"  -l|--list [<patró> ...]             Llista els paquets sense massa "
+"  -L|--listfiles <paquet> ...      Llista els fitxers que pertanyen als\n"
+"                                     paquets.\n"
+"  -l|--list [<patró> ...]         Llista els paquets sense massa "
 "detalls.\n"
-"  -W|--show <patró> ...               Mostra informació sobre els paquets.\n"
-"  -S|--search <patró> ...             Cerca els paquets als que pertanyen\n"
-"                                      els fitxers.\n"
-"  --help                              Mostra aquesta ajuda.\n"
-"  --version                           Mostra el número de versió.\n"
-"  --license | --licence               Mostra els termes de la llicència de\n"
-"                                      copyright.\n"
+"  -W|--show <patró> ...           Mostra informació sobre els paquets.\n"
+"  -S|--search <patró> ...         Cerca els paquets als que pertanyen\n"
+"                                     els fitxers.\n"
 "\n"
-"Opcions:\n"
-"  --admindir=<directori>              Utilitza <directori> en lloc de %s.\n"
-"  -f|--showformat=<format>            Utilitza un format alternatiu\n"
-"                                      per a --show.\n"
 
 #: src/query.c:498
 #, c-format
@@ -3045,6 +3032,9 @@ msgid ""
 "  -f|--showformat=<format>         Use alternative format for --show.\n"
 "\n"
 msgstr ""
+"Opcions:\n"
+"  --admindir=<directori>           Utilitza <directori> en lloc de %s.\n"
+"  -f|--showformat=<format>         Utilitza un format alternatiu per a --show.\n"
 
 #: src/query.c:504 dpkg-deb/main.c:97
 #, c-format
@@ -3261,9 +3251,8 @@ msgid "read error on standard input"
 msgstr "error de lectura en l'entrada estàndard"
 
 #: src/select.c:154
-#, fuzzy
 msgid "--clear-selections does not take any argument"
-msgstr "--set-selections no accepta cap argument"
+msgstr "--clear-selections no accepta cap argument"
 
 #: src/update.c:44
 #, c-format
@@ -3527,9 +3516,9 @@ msgid "failed to exec sh -c mv foo/* &c"
 msgstr "s'ha produït un error a l'executar sh -c mv foo/* etc."
 
 #: dpkg-deb/extract.c:59
-#, fuzzy, c-format
+#, c-format
 msgid "error reading %s from file %.255s"
-msgstr "s'ha produït un error en llegir %s de %.255s"
+msgstr "s'ha produït un error en llegir %s del fitxer %.255s"
 
 #: dpkg-deb/extract.c:61
 #, c-format
@@ -3623,13 +3612,11 @@ msgstr ""
 " mida %ld bytes: arxiu de control= %zi bytes.\n"
 
 #: dpkg-deb/extract.c:195
-#, fuzzy
 msgid "control information length"
-msgstr "longitud de la info. de control"
+msgstr "longitud de la informació de control"
 
-# FIXME original
 #: dpkg-deb/extract.c:197
-#, fuzzy, c-format
+#, c-format
 msgid "archive has malformatted control length `%s'"
 msgstr "l'arxiu té una longitud de control mal formatada «%s»"
 
@@ -3643,12 +3630,10 @@ msgstr ""
 " mida %ld bytes: arxiu de control= %zi, arxiu principal= %ld.\n"
 
 #: dpkg-deb/extract.c:208
-#, fuzzy
 msgid "failed allocating memory for variable `ctrlarea'"
-msgstr "S'ha produït un error al reservar memòria per a cfgfilename"
+msgstr "s'ha produït un error al reservar memòria per a la variable «ctrlarea»"
 
 #: dpkg-deb/extract.c:211
-#, fuzzy
 msgid "control area"
 msgstr "àrea de control"
 
@@ -4289,29 +4274,29 @@ msgstr "no es pot executar mksplit"
 #: scripts/cleanup-info.pl:36 scripts/dpkg-divert.pl:16
 #: scripts/dpkg-statoverride.pl:22 scripts/install-info.pl:18
 #: scripts/update-alternatives.pl:37
-#, fuzzy, perl-format
+#, perl-format
 msgid "Debian %s version %s.\n"
-msgstr "Rerefons d'arxius de paquets «%s» de Debian versió %s.\n"
+msgstr "Debian %s versió %s.\n"
 
 #: scripts/cleanup-info.pl:38
-#, fuzzy
 msgid ""
 "\n"
 "Copyright (C) 1996 Kim-Minh Kaplan."
-msgstr "Copyright © 1994-1996 Ian Jackson.\n"
+msgstr ""
+"\n"
+"Copyright © 1996 Kim-Minh Kaplan."
 
 #: scripts/cleanup-info.pl:41 scripts/dpkg-divert.pl:22
 #: scripts/dpkg-statoverride.pl:27 scripts/install-info.pl:23
 #: scripts/update-alternatives.pl:43
-#, fuzzy
 msgid ""
 "\n"
 "This is free software; see the GNU General Public Licence version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
+"\n"
 "Això és programari lliure, vegeu la Llicència Publica General GNU versió 2\n"
 "o posterior per a les condicions de còpia. No hi ha CAP garantia.\n"
-"Vegeu %s --licence per a veure més detalls sobre la llicència.\n"
 
 #: scripts/cleanup-info.pl:49
 #, perl-format
@@ -4790,11 +4775,12 @@ msgid "You need --help."
 msgstr ""
 
 #: scripts/install-info.pl:20
-#, fuzzy
 msgid ""
 "\n"
 "Copyright (C) 1994,1995 Ian Jackson."
-msgstr "Copyright © 1994-1996 Ian Jackson.\n"
+msgstr ""
+"\n"
+"Copyright © 1994,1995 Ian Jackson."
 
 #: scripts/install-info.pl:32
 #, perl-format
@@ -5419,9 +5405,6 @@ msgstr ""
 msgid "Serious problem: %s"
 msgstr ""
 
-#~ msgid "version a has bad syntax: %s\n"
-#~ msgstr "la versió «a» té una sintaxi dolenta: %s\n"
-
 #, fuzzy
 #~ msgid ""
 #~ "Usage: %s [<option> ...] <command>\n"
@@ -5606,33 +5589,6 @@ msgstr ""
 #~ "                          fitxers de control).\n"
 #~ "\n"
 #~ "Useu «dselect» o «aptitude» per a una gestió de paquets més amigable.\n"
-
-#~ msgid "  Package "
-#~ msgstr "  el paquet "
-
-#~ msgid " which provides "
-#~ msgstr " que proveeix "
-
-#~ msgid " is to be removed.\n"
-#~ msgstr " serà desinstal·lat.\n"
-
-#~ msgid "  Version of "
-#~ msgstr "  Versió de "
-
-#~ msgid " on system is "
-#~ msgstr " en el sistema és "
-
-#~ msgid " is not installed.\n"
-#~ msgstr " no està instal·lat.\n"
-
-#~ msgid " to: %s\n"
-#~ msgstr " per a: %s\n"
-
-#~ msgid "fgetpos failed"
-#~ msgstr "fgetpos ha fallat"
-
-#~ msgid "fsetpos failed"
-#~ msgstr "fsetpos ha fallat"
 
 # FIXME: Show information on package -> Lowercase "Show"
 #~ msgid ""
