--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-19  Guillem Jover  <guillem@debian.org>
+
+	* ca.po: Updated to 728t74f136u.
+
 2006-06-18  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Updated to 906t11f21u.
