Finished the Polish translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-19  Robert Luberda  <robert@debian.org>
+
+	* pl.po: Updated to 936t.
+
 2006-06-19  Guillem Jover  <guillem@debian.org>
 
 	* ca.po: Updated to 728t74f136u.
