--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   * Clarify dpkg-architecture new options '-e' and '-i' in man page, add
     backward compatibility information and give some examples.
     Thanks for the initial suggestions to Junichi Uekawa. Closes: #370830
+  * Modified some strings to be able to merge them in the .pot files.
   
   [ Frank Lichtenheld ]
   * dpkg-source issued spurious warnings about fields defined with
